--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.35.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.17",
+    "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
